# zordon-data-utils

./: .gitignore  README.md  pyproject.toml  zordon.py  zordon_spec.md
scope/: scope.md
specs/: zordon_spec.md
src/zordon/: __init__.py  client.py  errors.py  governance.py  naming.py  project.py  vocabularies.py
tests/: test_client.py  test_governance.py  test_naming.py  test_project.py
